Engine pointer and webots test for turnTowardsLastFaceAction

--- a/project/build-scripts/webots/webotsTests.cfg
+++ b/project/build-scripts/webots/webotsTests.cfg
@@ -23,3 +23,6 @@ world_file : testWorldActionRetry.wbt
 
 [CST_DockActions]
 world_file : testWorldBasicActions.wbt
+
+[CST_FaceActions]
+world_file : testWorldFaceActions.wbt
