Fix logic errors in robot firmware client implementation: 1. Resolve bug which could lead to a quasi-connected state that would stream video but not accept commands. 2. Add a message to change to reliable transport timeout on the robot FOR DEBUGGING ONLY!

--- a/robot/Makefile
+++ b/robot/Makefile
@@ -13,7 +13,7 @@ BINARY_RELEASE_DIR=releases
 VERSION_GENERATOR=tools/versionGenerator/versionGenerator.sh
 VERSION_HEADER=include/anki/cozmo/robot/version.h
 
-.PHONY: clean $(VERSION_HEADER) purgeAnkiLog verboseAnkiLog
+.PHONY: clean $(VERSION_HEADER) purgeAnkiLog verboseAnkiLog esp k02 nrf sim
 
 all: k02 esp sim
 
