Disables docka actions test

--- a/project/build-scripts/webots/webotsTests.cfg
+++ b/project/build-scripts/webots/webotsTests.cfg
@@ -21,8 +21,8 @@ world_file : testWorldBasicActions.wbt
 [CST_ActionRetry]
 world_file : testWorldActionRetry.wbt
 
-[CST_DockActions]
-world_file : testWorldBasicActions.wbt
+#[CST_DockActions]
+#world_file : testWorldBasicActions.wbt
 
 [CST_FaceActions]
 world_file : testWorldFaceActions.wbt
