--- a/robot/syscon/syscon.uvprojx
+++ b/robot/syscon/syscon.uvprojx
@@ -332,7 +332,7 @@
               <MiscControls>--gnu</MiscControls>
               <Define>NRF51,COZMO_ROBOT,SOFTDEVICE_PRESENT,BLE_STACK_SUPPORT_REQD</Define>
               <Undefine></Undefine>
-              <IncludePath>./components/device;./components/drivers_nrf/hal;./components/libraries/util/;./components/drivers_nrf/config/;./components/drivers_nrf/common/;./components/drivers_nrf/rng;./components/softdevice/common/softdevice_handler;./components/softdevice/s110/headers;./components/ble/common;./components/ble/ble_services/ble_bas;./components/ble/ble_services/ble_dis;./components/ble/ble_advertising;../include;.;./components/libraries/trace;./components/drivers_nrf/pstorage;./components/drivers_nrf/pstorage/config;./components/ble/device_manager;./components/ble/device_manager/config;./components/libraries/timer;./components/softdevice/s110/headers;./components/ble/ble_services/ble_bps;../generated/clad/robot;./boot</IncludePath>
+              <IncludePath>./components/device;./components/drivers_nrf/hal;./components/libraries/util/;./components/drivers_nrf/config/;./components/drivers_nrf/common/;./components/drivers_nrf/rng;./components/softdevice/common/softdevice_handler;./components/softdevice/s110/headers;./components/ble/common;./components/ble/ble_services/ble_bas;./components/ble/ble_services/ble_dis;./components/ble/ble_advertising;../include;.;./components/libraries/trace;./components/drivers_nrf/pstorage;./components/drivers_nrf/pstorage/config;./components/ble/device_manager;./components/ble/device_manager/config;./components/libraries/timer;./components/softdevice/s110/headers;./components/ble/ble_services/ble_bps;../generated/clad/robot;./crypto</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -592,11 +592,6 @@
               </FileOption>
             </File>
             <File>
-              <FileName>bignum.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\hal\bignum.cpp</FilePath>
-            </File>
-            <File>
               <FileName>logging.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\hal\logging.cpp</FilePath>
@@ -605,11 +600,6 @@
               <FileName>led.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\hal\led.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>sha1.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\boot\sha1.cpp</FilePath>
             </File>
           </Files>
         </Group>
@@ -660,6 +650,21 @@
               <FileName>clad.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\generated\clad\clad.cpp</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>crypto</GroupName>
+          <Files>
+            <File>
+              <FileName>bignum.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\crypto\bignum.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>sha1.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\crypto\sha1.cpp</FilePath>
             </File>
           </Files>
         </Group>
